2002-09-17  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile (prog-subdirs): Add console-client.

2002-09-05  Roland McGrath  <roland@frob.com>

	* Makeconf (CPPFLAGS): Add -std=gnu99 option.

2002-08-26  Roland McGrath  <roland@frob.com>

	* configure.in: Check for uselocale function.

2002-08-22  Marcus Brinkmann  <marcus@gnu.org>

	* aclocal.m4 (hurd_LIB_NCURSESW): New test, modified from GNU
	inetutils 1.4.0.
	* configure.in: Use hurd_LIB_NCURSESW.
	* config.make.in (LIBNCURSESW): New variable, substituted by
	configure.
	(NCURSESW_INCLUDE): Likewise.
	* Makefile (lib-subdirs): Add libcons.
	(prog-subdirs): Add console.

2002-06-14  Roland McGrath  <roland@frob.com>

	* Makeconf (cleantarg): Add $(libname).so.$(hurd-version).

	* Makeconf ($(patsubst %.o,%.d,$(filter %.o,$(OBJS)))): Give these dep
	files a dependency on $(INSTALLED_LOCAL_HEADERS).

2002-06-13  Roland McGrath  <roland@frob.com>

	* Makeconf (%_S.h %Server.c): Prepend $(mig-sheader-prefix)
	to stub header file name.
	(INSTALLED_LOCAL_HEADERS): Put them in the build directory,
	not the source.  Make files with #include rather than symlinks.
	(../$(dir)/%: %): New dummy pattern rule.
	(INCLUDES): New variable broken out of CPPFLAGS.  Add -I$(..)include.
	Include ..-relative dirs only if [$(dir) != .].
	(CPPFLAGS): Use that.

2002-06-11  Roland McGrath  <roland@frob.com>

	* Makeconf (CPPFLAGS): Add -D_FILE_OFFSET_BITS=64.
	(hurd-version): Update to 0.3 so as to change sonames.

2002-05-16  Roland McGrath  <roland@frob.com>

	* configure.in (asm_syntax): Add patterns for all the flavors we have
	pfinet/linux-src/include/asm-* directories for: arm, m68k, mips,
	sparc, sparc64.

2002-05-13  Marcus Brinkmann  <marcus@gnu.org>

	* version.h.in (STANDARD_HURD_VERSION): Remove EXTRA argument,
	because cpp 3.0 is not removing any token before ##args that is
	not a single comma, in order to be more C99 compliant.
	(_SHV_SEP): Removed.
	(STANDARD_HURD_VERSION_EXTRA): New macro that does the job of the